[gd_scene load_steps=7 format=3 uid="uid://ubvxbribfe3x"]

[ext_resource type="Script" uid="uid://gmi0g3ml8nn2" path="res://script/voiture.gd" id="1_hs4ok"]
[ext_resource type="Texture2D" uid="uid://bd511hbdevpxu" path="res://icon.svg" id="1_qv08e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hs4ok"]
size = Vector2(110, 112)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hs4ok"]
a = Vector2(-50, 0)
b = Vector2(89, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_rw1m6"]
a = Vector2(0, -124)
b = Vector2(0, 49)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jk6xw"]
a = Vector2(0, -118)
b = Vector2(0, 64)

[node name="Voiture" type="RigidBody2D" groups=["voitures"]]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_hs4ok")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qv08e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_hs4ok")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Devant" type="Area2D" parent="."]

[node name="MarkerDevant" type="CollisionShape2D" parent="Devant"]
position = Vector2(-21, -158)
shape = SubResource("SegmentShape2D_hs4ok")

[node name="Droite" type="Area2D" parent="."]

[node name="MarkerDroite" type="CollisionShape2D" parent="Droite"]
position = Vector2(138, -28)
shape = SubResource("SegmentShape2D_rw1m6")

[node name="Gauche" type="Area2D" parent="."]

[node name="MarkerGauche" type="CollisionShape2D" parent="Gauche"]
position = Vector2(-153, -40)
shape = SubResource("SegmentShape2D_jk6xw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Devant" to="." method="_on_devant_body_entered"]
[connection signal="body_exited" from="Devant" to="." method="_on_devant_body_exited"]
[connection signal="body_entered" from="Gauche" to="." method="_on_gauche_body_entered"]
[connection signal="body_exited" from="Gauche" to="." method="_on_gauche_body_exited"]
